fix firefox after-element footnote bug

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -271,6 +271,8 @@ tr.q-table-state-visible {
 
 .q-table-annotation {
   position: relative;
+  display: block;
+  width: 100%;
 }
 
 .q-table-annotation::after {
