--- a/views/table.html
+++ b/views/table.html
@@ -5,11 +5,8 @@
   {%- endif %}
   <div style="overflow-x: auto">
     {%- if item.options.showTableSearch === true %}
-    <div class="search-form">
-      <label for="search-form-input" class="hidden">Suchen</label>
-      <input id="search-form-input" class="search-form-input s-input-field" type="text" placeholder="Bitte Suche eingeben" maxlength="20" value="" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" style="height:46px;">
-      <div class="search-form-input-clear hidden" style="height:46px;width:46px;"></div>
-    </div>
+    <label for="search-form-input" class="hidden">Suchen</label>
+    <input id="search-form-input" class="s-input-field" type="search" placeholder="Bitte Suche eingeben" maxlength="20" value="" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" style="height:46px;">
     {%- endif %}
     <table class="q-table__table">
       {%- if item.options.hideTableHeader !== true %}
