use hidden attribute instead css class

--- a/views/table.html
+++ b/views/table.html
@@ -5,7 +5,7 @@
   {%- endif %}
   <div style="overflow-x: auto">
     {%- if item.options.showTableSearch === true %}
-    <label for="search-form-input" class="hidden">Suchen</label>
+    <label for="search-form-input" hidden>Suchen</label>
     <input id="search-form-input" class="s-input-field" type="search" placeholder="Bitte Suche eingeben" maxlength="20" value="" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false" style="height:46px;">
     {%- endif %}
     <table class="q-table__table">
