--- a/views/table.html
+++ b/views/table.html
@@ -5,8 +5,8 @@
   {%- endif %}
   <div style="overflow-x: auto;">
     {%- if noInteraction !== true and item.options.showTableSearch === true %}
-    <div class="search-form" style="padding: 0 1px">
-      <input class="search-form-input s-input-field" type="search" placeholder="Bitte Suche eingeben" maxlength="20" value="" autocapitalize="off" autocomplete="off" spellcheck="false" aria-label="Suchen">
+    <div class="q-table__search">
+      <input class="q-table__search__input s-input-field" type="search" placeholder="Bitte Suche eingeben" maxlength="20" value="" autocapitalize="off" autocomplete="off" spellcheck="false" aria-label="Suchen">
     </div>
     {%- endif %}
     <table class="q-table__table">
