--- a/views/cells/cell.html
+++ b/views/cells/cell.html
@@ -1,11 +1,17 @@
-<td 
-{% if item.options.hideTableHeader !== true %}
+<td {% if item.options.hideTableHeader !==true %}
   data-label="{{ tableData[0][loop.index0].value }}{% if (item.options.cardLayout or item.options.cardLayoutIfSmall) and tableData[0][loop.index0].footnote !== null and row_loop.index0 === 0 %}{{tableData[0][loop.index0].footnote.unicode}}{% endif %}"
-{% endif %} 
-  class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}">
-{%- if cell.footnote %}
-  <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation">{{ cell.value }}</span>
-{% else %}
-  {{ cell.value }}
-{%- endif %}
+  {% endif %} {% if item.options.heatmap.selectedColumn===loop.index0 and item.options.heatmap.selectedColumn !=null and
+  not initWithCardLayout %}
+  class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}} {{heatmap[row_loop.index-1].colorClass}}"
+  style="background-color: currentColor;" {% else %}
+  class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}" {% endif %}>
+
+  {%- if cell.footnote %}
+  <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation">
+  {% elif item.options.heatmap.selectedColumn===loop.index0 and item.options.heatmap.selectedColumn !=null and not initWithCardLayout %}
+  <span class="{{ heatmap[row_loop.index-1].textColor }}">
+  {% else %}
+  <span>
+  {%- endif %}
+  {{ cell.value }}</span>
 </td>
