--- a/views/cells/cell.html
+++ b/views/cells/cell.html
@@ -2,14 +2,14 @@
   data-label="{{ tableData[0][loop.index0].value }}{% if (item.options.cardLayout or item.options.cardLayoutIfSmall) and tableData[0][loop.index0].footnote !== null and row_loop.index0 === 0 %}{{tableData[0][loop.index0].footnote.unicode}}{% endif %}"
   {% endif %} {% if item.options.heatmap.selectedColumn===loop.index0 and item.options.heatmap.selectedColumn !=null and
   not initWithCardLayout %}
-  class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}} {{heatmap[row_loop.index-1].colorClass}}"
+  class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}} {{heatmap.colors[row_loop.index-1].colorClass}}"
   style="background-color: currentColor;" {% else %}
   class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}" {% endif %}>
 
   {%- if cell.footnote %}
   <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation">
   {% elif item.options.heatmap.selectedColumn===loop.index0 and item.options.heatmap.selectedColumn !=null and not initWithCardLayout %}
-  <span class="{{ heatmap[row_loop.index-1].textColor }}">
+  <span class="{{ heatmap.colors[row_loop.index-1].textColor }}">
   {% else %}
   <span>
   {%- endif %}
