outsourced footnotes-legend in file and fixed display bug

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -293,6 +293,7 @@ tr.q-table-state-visible {
   font-size: 9px;
   display: inline-block;
   width: 5px;
+  margin-right: 3px;
 }
 
 .q-table-col-footnotes {
