add formattingOptions to heatmap row

--- a/views/cells/cell.html
+++ b/views/cells/cell.html
@@ -22,5 +22,9 @@
   {% else %}
     <span>
   {%- endif %}
-  {{ cell.value }}</span>
+  {%- if heatmap.selectedColumn===loop.index0 and heatmap.selectedColumn !==null %}
+    {{cell.value}}  
+  {% else %}
+    {{ cell.value }}</span>
+  {%- endif %}
 </td>
