--- a/views/table.html
+++ b/views/table.html
@@ -1,14 +1,14 @@
-<div class="s-q-item q-table {% if initWithCardLayout %}q-table--card-layout{% endif %}" id="{{ id }}"
-  style="opacity: 0;">
+<div class="s-q-item q-table {% if initWithCardLayout %}q-table--card-layout{% endif %}" id="{{ id }}" style="opacity: 0;">
   {% if displayOptions.hideTitle !== true %}
-  <h3 class="s-q-item__title">{{ item.title }}</h3>{% endif %} {%- if item.subtitle and item.subtitle !== '' %}
-  <div class="s-q-item__subtitle">{{ item.subtitle }}</div>
+    <h3 class="s-q-item__title">{{ item.title }}</h3>
+  {% endif %}
+  {%- if item.subtitle and item.subtitle !== '' %}
+    <div class="s-q-item__subtitle">{{ item.subtitle }}</div>
   {%- endif %}
   <div style="overflow-x: auto;">
     {%- if noInteraction !== true and item.options.showTableSearch === true and tableData.length > 16 %}
     <div class="q-table__search">
-      <input class="q-table__search__input s-input-field" type="search" placeholder="Bitte Suche eingeben"
-        maxlength="20" value="" autocapitalize="off" autocomplete="off" spellcheck="false" aria-label="Suchen">
+      <input class="q-table__search__input s-input-field" type="search" placeholder="Bitte Suche eingeben" maxlength="20" value="" autocapitalize="off" autocomplete="off" spellcheck="false" aria-label="Suchen">
     </div>
     {%- endif %}
     {%- if heatmap.selectedColumn !==null and heatmap.selectedColumn !==undefined and not initWithCardLayout -%}
@@ -18,15 +18,15 @@
       {%- if item.options.hideTableHeader !== true %}
       <thead class="s-font-note s-font-note--strong">
         {%- for head in tableData[0] %}
-        <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }} {{head.classes.join(" ")}}" {%- if
+        <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }} {{head.classes.join(' ')}}" {%- if
           minibar.type !==undefined and item.options.minibar.selectedColumn===loop.index0 and
           item.options.minibar.selectedColumn !==null and minibar.type !=="mixed" and not initWithCardLayout %}
           colspan="2" id="q-table-minibar-header" {% elif minibar.type==="mixed" and
-          item.options.minibar.selectedColumn+1===loop.index %} id="q-table-minibar-header" {% endif %}>
+          item.options.minibar.selectedColumn===loop.index0 %} id="q-table-minibar-header" {% endif %}>
           {%- if head.footnote %}
-            <span data-annotation="{{ head.footnote.value }}" class="q-table-annotation">{{ head.value }}</span>
+          <span data-annotation="{{ head.footnote.value }}" class="q-table-annotation">{{ head.value }}</span>
           {% else %}
-            {{ head.value }}
+          {{ head.value }}
           {%- endif %}
         </th>
         {%- endfor %}
@@ -34,21 +34,23 @@
       {%- endif %}
       <tbody class="s-font-note">
         {%- for row in tableData.slice(1) %}
-        {% set row_loop = loop %}
-        <tr {% if numberOfRowsToHide and loop.index>= (tableData.length - numberOfRowsToHide) %}style="display: none;"{%
-          endif %}>
-          {%- for cell in row %}
-          {% if minibar.type==="positive" %}
-          {% include "./cells/minibar-positive.html" %}
-          {% elif minibar.type==="negative" %}
-          {% include "./cells/minibar-negative.html" %}
-          {% elif minibar.type==="mixed" %}
-          {% include "./cells/minibar-mixed.html" %}
-          {% else %}
-          {% include "./cells/cell.html" %}
-          {% endif %}
-          {%- endfor %}
-        </tr>
+          {% set row_loop = loop %}
+          <tr 
+            {% if numberOfRowsToHide and loop.index >= (tableData.length - numberOfRowsToHide) %}
+              style="display: none;"
+            {%endif %}>
+            {%- for cell in row %}
+              {% if minibar.type==="positive" %}
+                {% include "./cells/minibar-positive.html" %}
+              {% elif minibar.type==="negative" %}
+                {% include "./cells/minibar-negative.html" %}
+              {% elif minibar.type==="mixed" %}
+                {% include "./cells/minibar-mixed.html" %}
+              {% else %}
+                {% include "./cells/cell.html" %}
+              {% endif %}
+            {%- endfor %}
+          </tr>
         {%- endfor %}
       </tbody>
     </table>
