--- a/views/table.html
+++ b/views/table.html
@@ -40,13 +40,17 @@
               style="display: none;"
             {%endif %}>
             {%- for cell in row %}
-              {% if minibar.type==="positive" %}
-                {% include "./cells/minibar-positive.html" %}
-              {% elif minibar.type==="negative" %}
-                {% include "./cells/minibar-negative.html" %}
-              {% elif minibar.type==="mixed" %}
-                {% include "./cells/minibar-mixed.html" %}
-              {% else %}
+              {% if loop.index0 === item.options.minibar.selectedColumn %}
+                {% if minibar.type==="positive" %}
+                  {% include "./cells/minibar-positive.html" %}
+                {% elif minibar.type==="negative" %}
+                  {% include "./cells/minibar-negative.html" %}
+                {% elif minibar.type==="mixed" %}
+                  {% include "./cells/minibar-mixed.html" %}
+                {% else %} 
+                  {% include "./cells/cell.html" %}
+                {% endif %}
+              {% else %} 
                 {% include "./cells/cell.html" %}
               {% endif %}
             {%- endfor %}
