fixed openIcon file name

--- a/views/methodBox/methodBox.html
+++ b/views/methodBox/methodBox.html
@@ -26,8 +26,8 @@
     </div>
 {%- else -%}
     <div class="q-table-methods-link s-font-note-s">
-        {% include "./openIcon.html" %}
-        {% include "./closeIcon.html" %}
+        {% include "./OpenIcon.html" %}
+        {% include "./CloseIcon.html" %}
         <div class="q-table-methods-link-text">Daten und Methodik</div>
     </div>
     <div class="q-table-methods-container hidden s-font-note-s">
