initially load 100% legend with

--- a/views/legend.html
+++ b/views/legend.html
@@ -1,7 +1,7 @@
 {% if heatmap.heatmapType === "numerical" %}
     <!-- display numerical legend -->
     <div class="q-table__heatmap-legend--numerical">
-        <div class="q-table__heatmap-legend-container">
+        <div class="q-table__heatmap-legend-container q-table__heatmap-legend-container--desktop">
             <div class="q-table__heatmap-legend-value-container">
                 <span
                     class="q-table__heatmap-legend-value-container--minVal s-font-note s-font-note--tabularnums">{{heatmap.legendData.minValue}}</span>
